Update Readme + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ venv.bak/
 .vscode
 *.code-workspace
 .history
+
+################################
+########### PyCharm ############
+################################
+.idea
